--- a/index.html
+++ b/index.html
@@ -44,12 +44,15 @@
               <a onclick="return;" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu <span class="caret"></span></a>
               <ul class="dropdown-menu">
               <li><a href="#/">Home</a></li>
+              <li><a href="https://bitbucket.org/WikiDreams/" target="_blanc">BitBucket</a></li>
+              <li><a href="https://github.com/WikiDreams/" target="_blanc">GitHub</a></li>
+              <li><a href="https://www.facebook.com/MisterDSantoz/" target="_blanc">FaceBook</a></li>
               </ul>
             </li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
-    </nav>
+    </nav><br />
 
 
 <!-- Main component for a primary marketing message or call to action -->
@@ -58,7 +61,7 @@
           <!-- Views are displayed here -->
 		<div ng-view></div>
       </div>
-    </div> <!-- /container -->
+    </div> <!-- /container --><br />
 
 
 <footer class="footer">
