--- a/index.html
+++ b/index.html
@@ -1,79 +1,10 @@
 <!DOCTYPE html>
-<html ng-app="MyApp">
+<html>
 <head>
 <meta charset="ISO-8859-1">
 <title>Wiki Dreams</title>
-
-<!--  JQuery -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-
-<!-- AngularJS -->
-<script
-	src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
-<script
-	src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-route.js"></script>
-<script
-	src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular-resource.min.js"></script>
-
-<!-- Modules -->
-<script src="AngularJS/Modules/app.js" type="text/javascript"></script>
-
-<!-- Controllers -->
-<script src="AngularJS/Controllers/mainController.js" type="text/javascript"></script>
-
-<!--  Services -->
-<script src="AngularJS/Services/mainService.js" type="text/javascript"></script>
-
 </head>
 <body>
-
-<!-- Fixed navbar -->
-    <nav class="navbar navbar-default navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <div class="navbar-brand">Wiki Dreams</div>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">            <li class="dropdown">
-              <a onclick="return;" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-              <li><a href="#/">Home</a></li>
-              <li><a href="https://bitbucket.org/WikiDreams/" target="_blanc">BitBucket</a></li>
-              <li><a href="https://github.com/WikiDreams/" target="_blanc">GitHub</a></li>
-              <li><a href="https://www.facebook.com/MisterDSantoz/" target="_blanc">FaceBook</a></li>
-              </ul>
-            </li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav><br />
-
-
-<!-- Main component for a primary marketing message or call to action -->
-    <div class="container">
-      <div class="jumbotron">
-          <!-- Views are displayed here -->
-		<div ng-view></div>
-      </div>
-    </div> <!-- /container --><br />
-
-
-<footer class="footer">
-      <div class="container">
-        <p class="text-muted">© Copyright Wiki Dreams - 2016.</p>
-      </div>
-    </footer>
-
-<!-- Bootstrap -->
-<link rel="stylesheet" type="text/css"href="bootstrap-3.3.6/css/bootstrap-theme.min.css" />
-<link rel="stylesheet" type="text/css"href="bootstrap-3.3.6/css/bootstrap.min.css" />
-<script type="text/javascript"src="bootstrap-3.3.6/js/bootstrap.min.js"></script>
-
+<h1>Hello World!</h1>
 </body>
 </html>
