--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 </head>
 <body>
 <h1>Hello World!</h1>
-<a href="./Artificial Intelligence">Artificial Intelligence</a>
+<a href="Artificial Intelligence/AI_Dummies.pdf">Artificial Intelligence</a>
 </body>
 </html>
