--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>Wiki Dreams</title>
+<script src="JavaScript/getAllFiles.js"></script>
+
 </head>
 <body>
-<h1>Hello World!</h1>
-<a href="Artificial Intelligence/01 Deep Learning SIMPLIFIED - The Series Intro.mp3">Artificial Intelligence</a>
+<h1>Wiki Dreams</h1>
+<script>
+   console.log(getFiles('Artificial Intelligence'));
+</script>
 </body>
 </html>
