--- a/index.html
+++ b/index.html
@@ -3,13 +3,9 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>Wiki Dreams</title>
-<script src="JavaScript/getAllFiles.js"></script>
-
 </head>
 <body>
 <h1>Wiki Dreams</h1>
-<script>
-   console.log(getFiles('Artificial Intelligence'));
-</script>
+<a href="Artificial Intelligence">Artificial Intelligence</a>
 </body>
 </html>
