--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 </head>
 <body>
 <h1>Wiki Dreams</h1>
-<a href="Artificial Intelligence">Artificial Intelligence</a>
+<ul>
+<li><a href="Artificial Intelligence">Artificial Intelligence</a></li>
+</ul>
 </body>
 </html>
